Finish static pages

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,38 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>YumSweat | Bodyweight Workout Routine</title>
+
+
+	<meta name="description" content="Break a sweat every day with YumSweat's bodyweight workout routine. No gym or equipment required.">
+
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53433628-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+</head>
+<body>
+	<div class="container">
+		<h1 class="yumsweat-tagline">
+			<span id="yumsweat_title">YumSweat</span>
+			bodyweight workouts
+		</h1>
+		<h2>Break a daily sweat.</h2>
+
+		 <!-- tinyletter email -->
+		 			<div class="sign-up">
+	        	<form style="width:500px; margin: 0 auto 0; padding:3px;text-align:center;" action="https://tinyletter.com/sdebrule" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/sdebrule', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><input type="text" style="width:300px; height:50px; font-size:28px; line-height:50px; float:left; display: inline-block; padding-left: 10px;" placeholder="Enter email address"name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input style="background-color: #2ecc71;display: inline-block;border: 0px;color: #ffffff;font-size: 28px;font-weight: bold;padding: 6px 24px;text-decoration: none;height: 55px;border-radius: 0px; border-radius:5px; cursor:pointer;" type="submit" value="Sign up" /></form>
+	        </div>
+	</div> <!-- container -->
+
+
+
+</body>
+</html>
